site/htdocs/avanty/style/cash.css
#cash-sections .shell-menu {
	width: 40%;
	left: 30%;
}

#cash-sections .shell-menu li {
	width: calc(100% / 2 - 5px);
}

#cash-sections .shell-menu li:first-child {
	width: calc(100% / 2);
}

#cash-sections .shell .username {
	display: inline-block;
	width: calc(100% - 31px);
	overflow: hidden;
	text-align: center;
	line-height: 16px;
}

#cash-main > div {
	text-align: center;
}

#cash-main-othershift img, #cash-main-noshift img {
	width: 48px;
	height: 48px;
	padding-right: 0.5em;
	vertical-align: bottom;
}

#cash-main-noshift button {
	display: block;
	margin: 1em auto 0 auto;
}

#cash-main-othershift span {
	font-style: italic;
}

input[name="shift-begin-amount"] {
	width: 8ex;
}

#cash-park-rate {
	
}

#cash-park-rate form {
	flex-direction: row;
}

#cash-park-rate h3 {
	margin-bottom: 0;
	margin-right: 1em;
}

#cash-park-rate div {
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	height: 50vh;
}

.shift-report td:first-child {
	padding-right: 1em;
}

.shift-report th {
	padding-right: 1ex;
}

.shift-report table .money {
	text-align: right;
	line-height: unset;
	width: auto;
}

.shift-report td.tickets {
	text-align: left;
}

.shift-report > div {
	margin-top: 2em;
}

.shift-report > div button {
	margin-left: 1ex;
}

.shift-report > div button:first-child {
	margin-left: 0;
}

